<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".SearchActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/app_bar_layout" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:layout_weight="1"
            android:scrollbars="vertical"
            android:scrollingCache="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/spacing_mlarge"
                android:paddingTop="@dimen/spacing_mlarge"
                android:paddingRight="@dimen/spacing_mlarge"
                android:paddingBottom="@dimen/spacing_mlarge">




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_weight="1"
                        android:id="@+id/search_text"
                        style="@style/EditText.Flat.Grey"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/edit_text_round_bg"
                        android:drawablePadding="5dp"
                        android:hint="@string/type_keyword"
                        android:minHeight="40dp"
                        android:textColor="@color/white"
                        android:imeOptions="actionDone"
                        android:paddingLeft="10dp"
                        android:singleLine="true"
                        android:paddingRight="10dp" />
                    <Button
                        android:id="@+id/btn_search_done"
                        android:layout_width="35dp"
                        android:visibility="gone"
                        android:layout_marginLeft="4dp"
                        android:layout_height="35dp"
                        android:background="@drawable/ic_search_grey"/>


                </LinearLayout>




                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/spacing_large"
                    android:text="نوع البحث"
                    android:visibility="gone"
                    android:layout_margin="8dp"
                    android:textSize="16sp" />

                <com.google.android.flexbox.FlexboxLayout
                    android:layout_width="wrap_content"
                    android:layout_gravity="right"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/spacing_medium"
                    app:flexWrap="wrap"
                    app:justifyContent="flex_start">

                    <Button
                        android:id="@+id/btn_flex_1"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:onClick="btToggleClick"
                        android:text="@string/movie"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/btn_flex_2"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:onClick="btToggleClick"
                        android:text="@string/tv_series"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/btn_flex_3"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:onClick="btToggleClick"
                        android:text="@string/live_tv"
                        android:visibility="gone"
                        android:textAllCaps="false" />


                </com.google.android.flexbox.FlexboxLayout>

                <RelativeLayout
                    android:id="@+id/genre_layout"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/spacing_large">

                    <TextView
                        android:id="@+id/genreText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/genre"
                        android:layout_alignParentRight="true"
                        android:textAlignment="center"
                        android:layout_centerVertical="true"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/genre_spinner"
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:background="@drawable/edit_text_round_bg_overlay_light"
                        android:focusable="false"
                        android:paddingLeft="@dimen/spacing_middle"
                        android:paddingRight="@dimen/spacing_middle"
                        android:text="@string/all_genres"
                        android:textColor="@android:color/white" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/country_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/spacing_large">

                    <TextView
                        android:id="@+id/countrytv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/country"
                        android:textSize="16sp"
                        android:textAlignment="center"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentRight="true" />

                    <EditText
                        android:id="@+id/country_spinner"
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:background="@drawable/edit_text_round_bg_overlay_light"
                        android:focusable="false"
                        android:paddingLeft="@dimen/spacing_middle"
                        android:paddingRight="@dimen/spacing_middle"
                        android:text="@string/all_countries"
                        android:textColor="@android:color/white" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/tv_category_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/tv_category"
                        android:textSize="16sp"
                        android:visibility="gone"
                        android:textAlignment="center"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentRight="true" />

                    <EditText
                        android:id="@+id/tv_category_spinner"
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:visibility="gone"
                        android:layout_alignParentLeft="true"
                        android:background="@drawable/edit_text_round_bg_overlay_light"
                        android:focusable="false"
                        android:paddingLeft="@dimen/spacing_middle"
                        android:paddingRight="@dimen/spacing_middle"
                        android:text="@string/all_categories"
                        android:textColor="@android:color/white" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/yearRangeLayout"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/rangeTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_large"
                        android:text="@string/year_range"
                        android:textSize="16sp"
                        android:visibility="gone"
                        android:gravity="right"
                        tools:visibility="visible"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/range_picker_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <com.mawsome20.aflam20.widget.RangeSeekBar
                        android:id="@+id/range_seek_bar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:bar_color="@color/grey_20"
                        app:bar_highlight_color="@color/colorPrimary"
                        app:data_type="_long"
                        app:left_thumb_color="@color/colorPrimary"
                        app:left_thumb_color_pressed="@color/colorPrimaryDark"
                        app:right_thumb_color="@color/colorPrimary"
                        app:right_thumb_color_pressed="@color/colorPrimaryDark" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/year_min"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/year_range_start"
                            android:textSize="14sp" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/year_max"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/year_range_end"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_mlarge"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/clear_btn"
                        style="@style/Button.Primary.Borderless"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/red_600"
                        android:text="@string/cancel"
                        android:textColor="@color/white"
                        android:textAllCaps="false" />

                    <View
                        android:layout_width="@dimen/spacing_middle"
                        android:layout_height="0dp" />

                    <Button
                        android:id="@+id/search_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="بحث متقدم"

                        android:textAllCaps="false"
                        android:background="@color/colorPrimary"
                        android:textColor="@color/white" />

                </LinearLayout>
                <TextView
                    android:id="@+id/fast_result_label"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_margin="2dp"
                    android:text="نتائج البحث"/>

                <LinearLayout
                    android:id="@+id/fast_movie_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:id="@+id/fast_movie_title"
                        android:padding="10dp"
                        android:textAppearance="@style/TextAppearance.Medium.Bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movie"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/fast_movie_rv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fast_tv_series_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:id="@+id/fast_tv_series_title"
                        android:padding="10dp"
                        android:textAppearance="@style/TextAppearance.Medium.Bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_series"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/fast_tv_series_rv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false" />

                </LinearLayout>

            </LinearLayout>



        </androidx.core.widget.NestedScrollView>

    <include layout="@layout/adfalcon_banner"/>
    <include layout="@layout/startapp_banner"/>
    <!--
    <include layout="@layout/inmobi_banner"/>-->
    <RelativeLayout
        android:id="@+id/adView"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>